--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+ <!doctype html>
 
 <html class="no-js" lang="ES">
 
@@ -29,6 +29,7 @@
                     <div class="col-lg-12">
                         <span id="title">
                             <h1>#lifetime</h1>
+                            <h2>Pruebas Git</h2>
                         </span>
                     </div>
                 </div>
