--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                         <span id="title">
                             <h1>#lifetime</h1>
                             <h2>Pruebas Git</h2>
+                            <p>Más cambios para subir a GitHub</p>
                         </span>
                     </div>
                 </div>
