--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         <span id="title">
                             <h1>#lifetime</h1>
                             <h2>Pruebas Git</h2>
-                            <p>Javier Guede</p>
+                            <p>Javier Guede Seara</p>
                         </span>
                     </div>
                 </div>
