Cambios en Testing

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                             <h1>#lifetime</h1>
                             <h2>Pruebas Git</h2>
                             <p>Javier Guede Seara</p>
+			    <p>Arturo Guede Seara</p>
                         </span>
                     </div>
                 </div>
