--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <link rel="stylesheet" href="css/normalize.min.css">
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/font-awesome.min.css">
+        <link rel="stylesheet" href="css/flattyshadow.css">
 
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
 
@@ -32,7 +33,10 @@
                             <h2>Pruebas Git</h2>
                             <h2>MUY TOP</h2>
                             <p>Javier Guede Seara</p>
-			    <p>Arturo Guede Seara</p>
+			                <p>Arturo Guede Seara</p>
+                            <div class="flatty_shadow" data-bg-color="#2ecc71" data-shadow-color="#27ae60" data-icon-color="#ffffff" data-angle="35" data-depth="73" data-shape="50" data-bg-transparency="1" data-shadow-transparency="1" data-icon-transparency="1" data-pos-x="0" data-pos-y="0" data-bg-size="130" data-icon-size="64">
+                                <i class="fa fa-spotify"></i>
+                            </div>
                         </span>
                     </div>
                 </div>
@@ -93,6 +97,7 @@
 
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
         <script src="js/vendor/bootstrap.min.js"></script>
+        <script src="js/flattyshadow.js"></script>
         <script src="js/main.js"></script>
 
     </body>
